# PurgeKit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  test_cli.bat
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-merge-dependabot.yml  build-windows.yml  ci.yml  rebase-dependabot.yml  release-windows.yml
docs/: ACTIVE_TRACKER.md  ARCHITECTURE.md  CI_CD_RELEASES.md  CLI.md  CONFIGURATION.md  DEVELOPMENT.md  FEATURES.md  GLOBAL_CLI_SWEEPER.md  INSTALLATION.md  PROJECT_SWEEPER.md  QUARANTINE_ENGINE.md  SECURITY_UAC.md  SNAPSHOT_ENGINE.md  STARTUP_MANAGER.md  TOOLCHAIN_SWEEPER.md  TROUBLESHOOTING.md  WSL_DISK_SHRINKER.md
src/: app.css  app.html
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/src/: backup.rs  broadcast.rs  commands.rs  db.rs  lib.rs  locker.rs  main.rs  settings.rs  snapshot_engine.rs  startup_manager.rs  tracker.rs  winutil.rs
src-tauri/src/scanner/: autoruns.rs  cli_dev.rs  com_purger.rs  mod.rs  msi.rs  path_cleaner.rs  project_sweeper.rs  registry.rs  remnants.rs  toolchain_sweeper.rs  uwp.rs  wsl_shrinker.rs
src/lib/: toast.ts
src/lib/components/: AppsTab.svelte  DevToolsTab.svelte  PathCleanerTab.svelte  ProjectSweeperTab.svelte  SettingsTab.svelte  Sidebar.svelte  SnapshotsTab.svelte  StartupTab.svelte  Toast.svelte  WslShrinkerTab.svelte
src/routes/: +layout.svelte  +page.svelte
