[package]
name = "purgekit"
version = "1.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "purgekit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "purgekit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.56"
walkdir = "2"
rusqlite = { version = "0.40", features = ["bundled"] }
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1", features = ["v4"] }
windows-icons = "0.3.0"
chrono = "0.4"
base64 = "0.22"
is_elevated = "0.1"
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_ApplicationInstallationAndServicing",           # MSI FFI
    "Win32_System_RestartManager",       # Locked file unlock
    "Win32_Storage_FileSystem",          # MoveFileExW
    "Win32_UI_WindowsAndMessaging",      # WM_SETTINGCHANGE
    "Win32_UI_Shell",                    # SHChangeNotify
    "Win32_System_Threading",            # Handle duplication
    "Win32_System_Registry",             # RegSetValueExW (REG_EXPAND_SZ)
    "Win32_System_Environment",          # ExpandEnvironmentStringsW
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_LibraryLoader",        # SetDefaultDllDirectories
    "Win32_Security",
    "Win32_System_Console",
] }
